apps/base/rrstack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: rrstack
spec:
  ingressClassName: traefik
  rules:
    - host: local.prowlarr.nicklab.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  name: prowlarr-port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: rrstack
spec:
  ingressClassName: traefik
  rules:
    - host: local.sabnzbd.nicklab.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: rrstack
spec:
  ingressClassName: traefik
  rules:
    - host: local.radarr.nicklab.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: rrstack
spec:
  ingressClassName: traefik
  rules:
    - host: local.sonarr.nicklab.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
